# frameai

./: .gitignore  CLAUDE.md  CONCEPT.md  LICENSE  README.md  frame  frame.cmd  install.ps1  install.sh  pyproject.toml  setup.ps1  setup.sh
.claude/: hooks  settings.json  settings.local.json
agents/: a11y-auditor.md  architect.md  brainstormer.md  business-analyst.md  codebase-scanner.md  copywriter.md  data-modeler.md  design-auditor.md  desktop-uiux-developer.md  developer.md  devops.md  diagnostician.md  documenter.md  figma-converter.md  issue-writer.md  migrator.md  mobile-uiux-developer.md  planner.md  prd-writer.md  qa-designer.md  refactorer.md  requirement-analyst.md  research-auditor.md  review-merge-auditor.md  reviewer.md  scan-analyst.md  scan-architect.md  scan-data-modeler.md  scan-planner.md  scan-qa-designer.md  synthesizer-auditor.md  team-lead.md  test-generator.md  ui-reviewer.md  uiux-developer.md  ux-designer.md
docs/: cache_friendly_authoring.md  caching_notes.md  cc_feature_matrix.md  codex-adapter-operator.md  getting-started-claude-codex.md  provider-architecture-review.md  provider-architecture.md  provider-audit.md  security.md  telemetry_schema.md
frameai/: __init__.py
scripts/: capture_reference.py  capture_source.py  checkpoint.sh  contributor_report.py  flock_edit.sh  frameai_mcp_server.py  gen_skills.py  generate_figma_css.py  has_skill.py  kit_config.py  kit_update_check.py  lint_skill_cache_order.py  preambles.py  registry_edit.sh  screenshot_pilot.py  synthesize_from_deep_research.py  synthesize_review_notes.py  wt_cleanup.sh  (+3 more)
(+92 files in other folders)
