[project]
name = "claude-dev-kit"
version = "0.1.0"
description = "A reusable Claude Code kit for PRD-driven development with a GitHub-first workflow"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "locust>=2.43.4",
]
